--- a/3tier-bad/bad-playbook.yml
+++ b/3tier-bad/bad-playbook.yml
@@ -37,15 +37,19 @@
       state: latest
   - name: install HAProxy
     yum:
-      name=haproxy state=latest
+      name: haproxy
+      state: latest
+
   - name: enable HAProxy
     service:
       name: haproxy
       state: started
+
   - name: configure haproxy
     template:
       src: ./haproxy.cfg.j2
       dest: /etc/haproxy/haproxy.cfg
+
   - name: restart HAproxy
     service:
       name: haproxy
@@ -62,6 +66,7 @@
     package:
       name: tomcat
       state: latest
+
   - name: enable tomcat at boot
     service:
       name: tomcat
@@ -84,7 +89,7 @@
       state: started
 
 - name: index.html on app 1
-  hosts: app1
+  hosts: apps[0]
   gather_facts: false
   become: true
 
@@ -94,8 +99,8 @@
       src: index.html.app1
       dest: /usr/share/tomcat/webapps/ansible/index.html
 
-- name: index.html on app 1
-  hosts: app2
+- name: index.html on app 2
+  hosts: apps[1]
   gather_facts: false
   become: true
 
@@ -111,26 +116,31 @@
   become: true
   hosts: appdbs
   tasks:
-  - name: install progress
-    command: "yum install -y postgresql-server"
+ 
+  - name: install postgres
+    yum:
+      name: postgresql-server
+      state: latest
+    register: installed_pg
 
-  #- name: install postgres
-  #  yum:
-  #    name: postgresql-server
-  #    state: latest
   - name: enable apache at boot
     service:
       name: postgresql
       enabled: yes
+
   - name: tell user to finish setting up postgres
     debug:
       msg: "Either uncomment the postgres setup or manually login and initialize"
 
- # only run the next 2 tasks once!
-#  - name: initilize postgres
-#    command: postgresql-setup initdb
-#  - name: initilize postgres some more
-#    command: chkconfig postgresql on
+# only run the next 2 tasks once!
+  - name: initilize postgres
+    command: postgresql-setup initdb
+    when: installed_pg.changed
+
+  - name: initilize postgres some more
+    command: chkconfig postgresql on
+    when: installed_pg.changed
+
   - name: start postgres
     service:
       name: postgresql.service
@@ -142,14 +152,17 @@
   become: true
   hosts: apps
   tasks:
+
   - name: install apache
     yum:
       name: httpd
       state: latest
+
   - name: enable apache at boot
     service:
       name: httpd
       enabled: yes
+
   - name: start apache
     service:
       name: httpd
