--- a/3tier-bad/bad-playbook.yml
+++ b/3tier-bad/bad-playbook.yml
@@ -49,7 +49,9 @@
     template:
       src: ./haproxy.cfg.j2
       dest: /etc/haproxy/haproxy.cfg
+    notify: restart HAproxy
 
+  handlers:
   - name: restart HAproxy
     service:
       name: haproxy
