--- a/3tier-provision/roles/haproxy-deploy/tasks/main.yml
+++ b/3tier-provision/roles/haproxy-deploy/tasks/main.yml
@@ -1,17 +1,17 @@
 ---
 # tasks file for haproxy-deploy
-  - name: install {{ lb-package }}
+  - name: "install {{ lb-package }}"
     yum:
       name: "{{ lb-package }}"
       state: latest
 
-  - name: enable {{ lb-package }}
+  - name: "enable {{ lb-package }}"
     service:
       name: "{{ lb-package }}"
       state: started
 
-  - name: configure {{ lb-package }}
+  - name: "configure {{ lb-package }}"
     template:
       src: templates/haproxy.cfg.j2
       dest: /etc/haproxy/haproxy.cfg
-    notify: restart {{ lb-package }}
+    notify: "restart {{ lb-package }}"
